tests/testdata/run/error_016_dynamic_import_permissions2.out
[WILDCARD]
error: Uncaught (in promise) TypeError: Remote modules are not allowed to import local modules. Consider using a dynamic import instead.
  Importing: file:///c:/etc/passwd
    at http://localhost:4545/subdir/evil_remote_import.js:3:15
  await import("http://localhost:4545/subdir/evil_remote_import.js");
  ^
    at async file://[WILDCARD]/error_016_dynamic_import_permissions2.js:4:3
